change ipaddress to global for remote working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
+ip-address.wan=phanhoangminhluan.myddns.rocks
 
-database.ip=localhost
+database.ip=${ip-address.wan}
 database.name=fuhm-sags
 database.port=3306
 
