--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,20 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+security.require-ssl=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=fuhm.p12
+server.ssl.key-store-password=23121998
+server.ssl.key-alias=fuhm
+
+
+#SSL Key Info
+
+##trust store location
+#trust.store=keystore/fuhm.sags
+##trust store password
+#trust.store.password=23121998
+
+# keytool -genkeypair -alias fuhm -keyalg RSA -keysize 2048 -storetype PKCS12 -keystore fuhm.p12 -validity 3650
