--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ip-address.wan=phanhoangminhluan.myddns.rocks
-
+server.port=8443
 database.ip=${ip-address.wan}
 database.name=fuhm-sags
 database.port=3306
@@ -14,11 +14,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
-security.require-ssl=true
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store=fuhm.p12
-server.ssl.key-store-password=23121998
-server.ssl.key-alias=fuhm
+server.ssl.key-store=minhluan1998.p12
+server.ssl.key-store-password=changeit
+server.ssl.key-alias=minhluan1998
+#security.require-ssl=true
 
 
 #SSL Key Info
@@ -28,4 +28,6 @@ server.ssl.key-alias=fuhm
 ##trust store password
 #trust.store.password=23121998
 
-# keytool -genkeypair -alias fuhm -keyalg RSA -keysize 2048 -storetype PKCS12 -keystore fuhm.p12 -validity 3650
+# keytool -genkeypair -alias minhluan1998 -keyalg RSA -keysize 2048 -storetype PKCS12 -keystore minhluan1998.p12 -validity 3650
+# keytool -export -keystore minhluan1998.p12 -alias minhluan1998 -file minhluan1998.crt
+# keytool -importcert -file minhluan1998.crt -alias tomcat -keystore /Library/Java/JavaVirtualMachines/jdk1.8.0_241.jdk/Contents/Home/jre/lib/security/cacerts
